--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ project(sfml-hello-vi VERSION 1.0.0)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SFML_STATIC_LIBRARIES TRUE)
+# Uncomment to do static-linking
+# set(SFML_STATIC_LIBRARIES TRUE)
 
 find_package(SFML 2.5 COMPONENTS graphics window system REQUIRED)
 
